Refactor HTTP and TCP handlers for performance improvements
- Pre-size HashMaps in HttpStubHandler for query parameters and headers to reduce resizing overhead.
- Implement LRU caching for regex patterns in TcpStubHandler using LinkedHashMap to improve regex matching efficiency.
- Replace String.format with HexUtils for byte-to-hex conversion in TcpStubHandler to enhance performance.
- Introduce HexUtils class for optimized hex conversion methods, reducing allocation overhead in hot paths.

Enhance FileStorage for concurrent write operations

- Replace single ReadWriteLock with per-entity ReentrantLocks in FileStorage to allow concurrent writes to different entity types.
- Change recordings storage from CopyOnWriteArrayList to ArrayDeque for better performance on high-frequency appends.
- Optimize recording management with dedicated locks and improved deletion logic to prevent blocking during high-frequency operations.

Optimize JdbcSceneService and JdbcStorageService for caching and batch processing

- Cache scene lists in JdbcSceneService to reduce database queries during environment checks.
- Batch rule associations and dissociations in JdbcStorageService to minimize database round-trips and improve efficiency.
- Refactor caching mechanism in JdbcStorageService to use atomic references for cache entries, ensuring consistency between value and timestamp.

Add HexUtils for efficient byte-to-hex conversion

- Introduce HexUtils class with precomputed lookup tables for fast byte-to-hex conversions, replacing slower String.format calls.